--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -77,7 +77,7 @@
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:clickable">false</item>
-        <item name="android:enabled">false</item>
+<!--        <item name="android:enabled">false</item>-->
     </style>
 
     <style name="default_progress_bar">
