--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,187 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".signup.RegisterActivity">
+    android:background="@color/black"
+    android:layout_height="match_parent">
+        <!--    android:alpha="0.3"-->
+        <!--    >-->
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical"
+            tools:context=".signup.RegisterActivity">
 
-        <TextView
-            android:id="@+id/signup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center"
-            android:text="Sign up for free"
-            android:textColor="@color/white"
-            android:hint=" name"
-            android:textSize="25dp"
-            android:textStyle="bold" />
+                <!--    app:layout_constraintBottom_toTopOf="@id/button_second"-->
+                <TextView
+                    android:id="@+id/signup"
+                    android:layout_width="261dp"
+                    android:layout_height="34dp"
+                    android:layout_marginLeft="75dp"
+                    android:layout_marginTop="40dp"
+                    android:fontFamily="Inter"
+                    android:gravity="center"
+                    android:text="Sign up for free"
+                    android:textColor="@color/_bg__signin_page_color"
+                    android:textSize="19sp"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:text="@string/name"
-            android:id="@+id/nameid"
-            android:layout_below="@id/signup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp"
-            android:textColor="#BABABA"
-            android:textSize="17dp"
-            android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/register_name_label"
+                    style="@style/mandatory_label_text"
+                    android:text="Name" />
 
-        <EditText
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nameid"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:background="@drawable/rounded_rectangle_bg"
-            android:drawableLeft="@drawable/ic_baseline_person_24"
-            android:padding="15dp"
-            android:hint=" Full Name"
-            android:textColor="@color/white"
-            android:textColorHint="@color/cardview_dark_background"
-            android:textSize="16dp" />
+                <EditText
+                    android:id="@+id/register_name_text"
+                    style="@style/default_edit_text"
+                    android:hint="Name" />
 
-        <TextView
-            android:text="@string/phone"
-            android:id="@+id/phoneid"
-            android:layout_below="@id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="50dp"
-            android:textColor="#BABABA"
-            android:textSize="17dp"
-            android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/register_name_error_text"
+                    style="@style/default_error_text"
+                    android:visibility="gone"
+                    android:text="Name is required" />
 
-        <EditText
-            android:id="@+id/phoneNumber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/phoneid"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:background="@drawable/rounded_rectangle_bg"
-            android:drawableLeft="@drawable/ic_baseline_phone_24"
-            android:hint=" 0123456789"
-            android:inputType="number"
-            android:padding="15dp"
-            android:textColor="@color/white"
-            android:textColorHint="@color/cardview_dark_background"
-            android:textSize="16dp" />
 
-        <TextView
-            android:text="@string/email"
-            android:id="@+id/emailid"
-            android:layout_below="@id/phoneNumber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="50dp"
-            android:textColor="#BABABA"
-            android:textSize="17dp"
-            android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/register_phone_number_label"
+                    style="@style/mandatory_label_text"
+                    android:text="Phone Number" />
 
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/emailid"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:background="@drawable/rounded_rectangle_bg"
-            android:drawableLeft="@drawable/ic_baseline_email_24"
-            android:hint=" example@gmail.com"
-            android:padding="15dp"
-            android:textColor="@color/white"
-            android:textColorHint="@color/cardview_dark_background"
-            android:textSize="16dp" />
+                <EditText
+                    android:id="@+id/register_phone_number_text"
+                    style="@style/default_edit_text"
+                    android:hint="Phone Number"
+                    android:inputType="phone" />
 
-        <TextView
-            android:text="@string/pwd"
-            android:id="@+id/pwdid"
-            android:layout_below="@id/email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="50dp"
-            android:textColor="#BABABA"
-            android:textSize="17dp"
-            android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/register_phone_number_error_text"
+                    style="@style/default_error_text"
+                    android:visibility="gone"
+                    android:text="Phone Number is required" />
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/pwdid"
-            android:background="@drawable/rounded_rectangle_bg"
-            android:drawableLeft="@drawable/ic_baseline_lock_24"
-            android:hint=" ********"
-            android:inputType="textPassword"
-            android:padding="15dp"
-            android:textColor="@color/white"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:textColorHint="@color/cardview_dark_background"
-            android:textSize="16dp" />
-        <TextView
-            android:text="@string/retype"
-            android:id="@+id/retype"
-            android:layout_below="@id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="50dp"
-            android:textColor="#BABABA"
-            android:textSize="17dp"
-            android:textStyle="bold" />
-        <EditText
-            android:id="@+id/retypePwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/retype"
-            android:background="@drawable/rounded_rectangle_bg"
-            android:drawableLeft="@drawable/ic_baseline_lock_24"
-            android:hint=" ********"
-            android:inputType="textPassword"
-            android:padding="15dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:textColor="@color/white"
-            android:textColorHint="@color/cardview_dark_background"
-            android:textSize="16dp" />
+                <TextView
+                    android:id="@+id/register_email_label"
+                    style="@style/mandatory_label_text"
+                    android:text="Email" />
+
+                <EditText
+                    android:id="@+id/register_email_text"
+                    style="@style/default_edit_text"
+                    android:hint="Email" />
+
+                <TextView
+                    android:id="@+id/register_email_error_text"
+                    style="@style/default_error_text"
+                    android:visibility="gone"
+                    android:text="Email is required" />
+
+
+                <TextView
+                    android:id="@+id/register_pwd_label"
+                    style="@style/mandatory_label_text"
+                    android:text="Password" />
+
+                <EditText
+                    android:id="@+id/register_pwd_text"
+                    style="@style/default_edit_text"
+                    android:inputType="textPassword"
+                    android:hint="Password" />
+
+                <TextView
+                    android:id="@+id/register_pwd_error_text"
+                    style="@style/default_error_text"
+                    android:visibility="gone"
+                    android:text="Passwords must be of 8 char" />
+                <TextView
+                    android:id="@+id/register_repwd_label"
+                    style="@style/mandatory_label_text"
+                    android:text="Re-Type Password" />
+
+                <EditText
+                    android:id="@+id/register_repwd_text"
+                    style="@style/default_edit_text"
+                    android:inputType="textPassword"
+                    android:hint="Password" />
+
+                <TextView
+                    android:id="@+id/register_repwd_error_text"
+                    style="@style/default_error_text"
+                    android:visibility="gone"
+                    android:text="Passwords must match" />
+
+        </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/register_progress_bar"
+            style="@style/default_progress_bar" />
 
         <Button
-            android:id="@+id/signUpBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/retypePwd"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="30dp"
-            android:background="@drawable/rounded_rectangle_bg"
-            android:backgroundTint="#A9CACF"
-            android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
-            android:padding="10dp"
+            android:id="@+id/signup_button"
+            style="@style/default_disabled_button"
             android:text="Sign Up"
-            android:textColorHint="@color/white"
-            android:textSize="16dp" />
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            />
+
 
 </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
