signin logic changes

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,7 +76,7 @@
         <item name="android:minWidth">@dimen/_260sdp</item>
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_centerHorizontal">true</item>
-        <item name="android:clickable">false</item>
+<!--        <item name="android:clickable">false</item>-->
 <!--        <item name="android:enabled">false</item>-->
     </style>
 
