--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -121,11 +121,16 @@
 
         <Button
             android:id="@+id/signup_button"
-            style="@style/default_disabled_button"
             android:text="Sign Up"
+            android:layout_width="250dp"
+            android:layout_height="51dp"
+            android:layout_marginTop="550dp"
             android:textColor="@color/white"
             android:textStyle="bold"
-            />
+            android:onClick="onClickSignUpButton"
+            ></Button>
 
 
 </RelativeLayout>
+
+    <!--   style="@style/default_disabled_button" -->
