--- a/app/src/main/res/layout/schedule_appointment_fragment.xml
+++ b/app/src/main/res/layout/schedule_appointment_fragment.xml
@@ -13,13 +13,7 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="-60dp">
 
-        <ImageButton
-            android:id="@+id/searchBackButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/black"
-            android:padding="20dp"
-            android:src="@drawable/img_2" />
+
         <TextView
             android:id="@+id/docName"
             android:layout_width="304dp"
@@ -272,3 +266,11 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--<ImageButton
+            android:id="@+id/searchBackButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            android:padding="20dp"
+            android:src="@drawable/img_2" />-->
