Confirm Appointment changes.

--- a/app/src/main/res/layout/confirm_appointment_fragment.xml
+++ b/app/src/main/res/layout/confirm_appointment_fragment.xml
@@ -101,12 +101,12 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="575dp"
+            android:layout_marginTop="530dp"
             android:layout_marginEnd="30dp"
             android:background="@drawable/rounded_rectangle_bg"
             android:backgroundTint="#A9CACF"
             android:padding="10dp"
-            android:text="Book Appointment"
+            android:text="Confirm Appointment"
             android:textColorHint="@color/white"
             android:textSize="14dp"
             android:textStyle="bold" />
