--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -41,6 +41,7 @@
                 android:layout_alignParentEnd="true"
                 android:backgroundTint="@color/black"
                 android:paddingTop="12dp"
+                android:visibility="visible"
                 app:icon="@drawable/ic_baseline_add_circle_outline_24"
                 app:iconTint="@color/primary_color"
                 app:layout_constraintBottom_toBottomOf="parent"
