Doctor curd operation and dynamic dropdown changes

--- a/app/src/main/res/navigation/nav_doctor.xml
+++ b/app/src/main/res/navigation/nav_doctor.xml
@@ -22,7 +22,7 @@
         tools:layout="@layout/add_doctor">
 
         <action
-            android:id="@+id/action_AddDoctorFragment_to_DoctorListFragment"
-            app:destination="@id/DoctorListFragment" />
+            android:id="@+id/action_AddDoctorFragment_to_DoctorActivity"
+            app:destination="@id/nav_doctor" />
     </fragment>
 </navigation>
