--- a/app/src/main/res/navigation/nav_appointment.xml
+++ b/app/src/main/res/navigation/nav_appointment.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
+    android:id="@+id/nav_appointment"
     app:startDestination="@id/MakeAppointment">
 
     <fragment
@@ -31,6 +31,17 @@
         android:name="com.example.mediassist.appointment.ConfirmAppointmentFragment"
         android:label="Confirm Appointment"
         tools:layout="@layout/confirm_appointment_fragment">
+        <action
+            android:id="@+id/action_ConfirmAppointment_to_nav_appointment"
+            app:destination="@id/nav_appointment" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/PendingAppointment"
+        android:name="com.example.mediassist.appointment.PendingAppointmentFragment"
+        android:label="Pending Appointment"
+        tools:layout="@layout/pending_appointment_fragment">
 
 
     </fragment>
