--- a/app/src/main/res/navigation/nav_dashboard.xml
+++ b/app/src/main/res/navigation/nav_dashboard.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_PatientDashboard_to_ClinicAdminDashboard"
             app:destination="@id/ClinicAdminDashboard" />
+        <action
+            android:id="@+id/action_PatientDashboard_to_PendingAppointmentFragment"
+            app:destination="@id/PendingAppointment" />
     </fragment>
     <fragment
         android:id="@+id/ClinicAdminDashboard"
