fixed error in category

--- a/app/src/main/res/layout/add_category.xml
+++ b/app/src/main/res/layout/add_category.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,7 +8,9 @@
     android:layout_height="match_parent">
     <!--    android:alpha="0.3"-->
     <!--    >-->
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -84,7 +88,7 @@
 
 
     </LinearLayout>
-
+</ScrollView>
     <ProgressBar
         android:id="@+id/category_progress_bar"
         style="@style/default_progress_bar" />
