--- a/app/src/main/res/layout/accept_appointment_fragment.xml
+++ b/app/src/main/res/layout/accept_appointment_fragment.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".appointmentstatus.PendingAppointmentFragment">
-
+    tools:context=".clinicadmin.AcceptAppointmentFragment">
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,7 +12,7 @@
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/idRVCoursePendingAppointment"
+            android:id="@+id/idRVCourseAcceptAppointment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.appcompat.widget.LinearLayoutCompat>
