--- a/app/src/main/res/layout/add_clinic.xml
+++ b/app/src/main/res/layout/add_clinic.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:isScrollContainer="true"
+    android:scrollbars="vertical"
     android:layout_height="match_parent">
 <!--    android:alpha="0.3"-->
 <!--    >-->
@@ -12,6 +14,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
+
+
         tools:context=".clinic.AddClinicFragment">
 
         <!--    app:layout_constraintBottom_toTopOf="@id/button_second"-->
@@ -160,7 +164,7 @@
 
 
 
-    </LinearLayout>
+
 
     <ProgressBar
         android:id="@+id/clinic_progress_bar"
@@ -207,4 +211,5 @@
             app:cornerRadius="100dp" />
 
     </LinearLayout>
-</RelativeLayout>
+    </LinearLayout>
+</ScrollView>
