user creation for doc

--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:backgroundTint="@color/black"
+    android:id="@+id/welcome_fragment"
     android:elevation="0dp"
     tools:context=".WelcomeFragment">
 
