--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -36,7 +36,7 @@
                 android:text="MediAssist" />
 
             <ImageButton
-                android:id="@+id/btnAdd"
+                android:id="@+id/btnSignout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
