--- a/app/src/main/res/layout/pending_appointment_clinic_specific_fragment.xml
+++ b/app/src/main/res/layout/pending_appointment_clinic_specific_fragment.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".appointmentacceptstatus.AcceptAppointmentFragment">
+    tools:context=".acceptdenyappointment.PendingAppointmentClinicSpecificFragment">
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,9 +14,8 @@
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/idRVCourseAcceptAppointment"
+            android:id="@+id/idRVCoursePendingAppointmentClinicSpecific"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.appcompat.widget.LinearLayoutCompat>
-
 </FrameLayout>
