--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,8 +78,8 @@
         <item name="android:layout_marginTop">@dimen/_20sdp</item>
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:layout_gravity">center</item>
-<!--        <item name="android:clickable">false</item>-->
-<!--        <item name="android:enabled">false</item>-->
+        <item name="android:clickable">false</item>
+        <item name="android:enabled">false</item>
     </style>
 
     <style name="default_progress_bar">
