--- a/app/src/main/res/layout/fragment_patient_dashboard.xml
+++ b/app/src/main/res/layout/fragment_patient_dashboard.xml
@@ -53,6 +53,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/category_page_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="100dp"
@@ -75,108 +76,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-
+            android:layout_marginRight="30dp"
             android:orientation="horizontal">
 
-            <GridLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/categories_list"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:alignmentMode="alignMargins"
-                android:columnCount="4"
-                android:columnOrderPreserved="true"
-                android:orientation="horizontal"
-                android:rowCount="3">
-
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/clinic_doctor_specialist_card"
-                    style="@style/doctor_specialist_card">
-
-                    <ImageView
-
-                        style="@style/dashboard_specialist_menu_image_view"
-                        android:src="@drawable/neuron" />
-
-                    <TextView
-                        style="@style/dashboard_menu_text"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="20dp"
-                        android:text="Neurologist" />
-
-                    <TextView
-                        style="@style/dashboard_menu_text"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="40dp"
-                        android:text="10 doctors" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/clinic_doctor_specialist_card2"
-                    style="@style/doctor_specialist_card">
-
-                    <ImageView
-
-                        style="@style/dashboard_specialist_menu_image_view"
-                        android:src="@drawable/dentistry" />
-
-                    <TextView
-                        style="@style/dashboard_menu_text"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="20dp"
-                        android:text="Dentist" />
-
-                    <TextView
-                        style="@style/dashboard_menu_text"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="40dp"
-                        android:text="25 doctors" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/clinic_doctor_specialist_card3"
-                    style="@style/doctor_specialist_card">
-
-                    <ImageView
-
-                        style="@style/dashboard_specialist_menu_image_view"
-                        android:src="@drawable/cardio" />
-
-                    <TextView
-                        style="@style/dashboard_menu_text"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="20dp"
-                        android:text="Cardiologist" />
-
-                    <TextView
-                        style="@style/dashboard_menu_text"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="40dp"
-                        android:text="2 doctors" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/clinic_doctor_specialist_card4"
-                    style="@style/doctor_specialist_card">
-
-                    <ImageView
-
-                        style="@style/dashboard_specialist_menu_image_view"
-                        android:src="@drawable/allergies" />
-
-                    <TextView
-                        style="@style/dashboard_menu_text"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="20dp"
-                        android:text="Allergist" />
-
-                    <TextView
-                        style="@style/dashboard_menu_text"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="40dp"
-                        android:text="14 doctors" />
-                </androidx.cardview.widget.CardView>
-            </GridLayout>
+                android:layout_height="wrap_content"/>
         </LinearLayout>
         </HorizontalScrollView>
         <TextView
