--- a/app/src/main/res/navigation/nav_dashboard.xml
+++ b/app/src/main/res/navigation/nav_dashboard.xml
@@ -34,7 +34,7 @@
         android:id="@+id/ClinicAdminDashboard"
         android:name="com.example.mediassist.dashboard.ClinicAdminDashboardFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/clinic_admin_layout">
 
         <action
             android:id="@+id/action_ClinicAdminDashboard_to_DoctorDashboard"
