--- a/app/src/main/res/layout/cancel_appointment_fragment.xml
+++ b/app/src/main/res/layout/cancel_appointment_fragment.xml
@@ -42,15 +42,18 @@
         android:id="@+id/label3value"
         style="@style/default_edit_text"
         />
-    <Button
-        android:id="@+id/cancelAppointmentButton"
-        android:text="Cancel Appointment"
-        android:backgroundTint="#A9CACF"
-        android:layout_width="300dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="100dp"
-        style="@style/default_disabled_button"
-        />
+
+        <Button
+            android:id="@+id/cancelAppointmentButton"
+            style="@style/default_disabled_button"
+            android:layout_width="240dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="100dp"
+            android:backgroundTint="#A9CACF"
+            android:clickable="true"
+            android:enabled="true"
+            android:text="Cancel Appointment"
+            android:textColor="#408E9B" />
     </LinearLayout>
     </RelativeLayout>
