--- a/app/src/main/res/navigation/nav_scheduledfordoctor.xml
+++ b/app/src/main/res/navigation/nav_scheduledfordoctor.xml
@@ -2,27 +2,15 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
-    app:startDestination="@id/First2Fragment">
+    android:id="@+id/nav_scheduledfordoctor"
+    app:startDestination="@id/ScheduleAppointmentForDoctorFragment">
 
     <fragment
-        android:id="@+id/First2Fragment"
+        android:id="@+id/ScheduleAppointmentForDoctorFragment"
         android:name="com.example.mediassist.scheduleappointmentdoctor.ScheduleAppointmentForDoctorFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/schduled_appointment_for_doctor_fragment">
 
-        <action
-            android:id="@+id/action_First2Fragment_to_Second3Fragment"
-            app:destination="@id/Second3Fragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/Second3Fragment"
-        android:name="com.example.mediassist.scheduleappointmentdoctor.Second3Fragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second3">
+       </fragment>
 
-        <action
-            android:id="@+id/action_Second3Fragment_to_First2Fragment"
-            app:destination="@id/First2Fragment" />
-    </fragment>
 </navigation>
