--- a/app/src/main/res/layout/clinic_list.xml
+++ b/app/src/main/res/layout/clinic_list.xml
@@ -23,6 +23,11 @@
             android:visibility="gone"
             android:src="@drawable/empty_clinic" />
 
+
+        <ProgressBar
+            android:id="@+id/clinic_list_progress_bar"
+            style="@style/default_progress_bar" />
+
         <TextView
             android:id="@+id/clinic_not_found_text"
             android:layout_width="wrap_content"
