--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -87,6 +87,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_centerInParent">true</item>
         <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:indeterminate">true</item>
+        <item name="android:indeterminateTint">@color/primary_color</item>
         <item name="android:visibility">gone</item>
     </style>
 
